[tool.poetry]
name = "pyxbos-dbcli"
version = "0.1.2"
description = ""
authors = ["Gabe Fierro <gtfierro225@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
prompt_toolkit = "^2.0"
pygments = "^2.4"
numpy = "^1.17"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
