[tool.poetry]
name = "pyxbos"
version = "0.2.2"
description = "Python bindings for XBOS-flavored WAVEMQ and related services"
authors = ["Gabe Fierro <gtfierro@cs.berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.5"
grpcio = "^1.18"
googleapis-common-protos = "^1.5"
grpcio-tools = "^1.18"
#pandas = "^0.23.4"

tlslite-ng = "^0.7.5"
[tool.poetry.dev-dependencies]
phue = "^1.1"
psutil = "^5.5"
requests = "^2.21"
pyaml = "^18.11"
pymortar = "^1.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
